增加边框效果、多行文字垂直居中、TAB效果

--- a/css.html
+++ b/css.html
@@ -47,7 +47,7 @@
 		}
 	</style>
 	<article>
-		<h5></h5>
+		<h5>标题1</h5>
 		<div class="css-con">
 			<style>
 				.s-line-title{
@@ -76,7 +76,7 @@
 
 
 	<article>
-		<h5></h5>
+		<h5>标题2</h5>
 		<div class="css-con ">
 			<style>
 				.line-or{
@@ -104,7 +104,7 @@
 
 
 	<article>
-		<h5></h5>
+		<h5>标题3</h5>
 		<div class="css-con ">
 			<style>
 				.title1{
@@ -131,7 +131,7 @@
 
 
 	<article>
-		<h5></h5>
+		<h5>CSS3</h5>
 		<div class="css-con ">
 			<style>
 				.css3_wrap1{
@@ -185,7 +185,7 @@
 
 
 	<article>
-		<h5></h5>
+		<h5>CSS3鼠标移动上去放大图片</h5>
 		<div class="css-con ">
 			<div class="css3_wrap2">
 				<img src="images/koala.jpg">
@@ -212,7 +212,7 @@
 
 
 	<article>
-		<h5></h5>
+		<h5>画三角形</h5>
 		<div class="css-con ">
 
 
@@ -228,6 +228,121 @@
 			<div class="trange"></div>
 		</div>
 	</article>
+
+
+
+	<article>
+		<h5>边框</h5>
+		<div class="css-con ">
+
+			<ul class="ul_wrap">
+				<li class="li_inner"></li>
+				<li class="li_inner"></li>
+				<li class="li_inner"></li>
+				<li class="li_inner"></li>
+			</ul>
+
+
+
+			<style>
+				.ul_wrap{
+					width: 102px;
+					font-size: 0;
+					/*清除默认的一些间隔*/
+				}
+				.li_inner{
+
+					display: inline-block;
+					height: 30px;
+					width: 50px;
+					border: 1px solid #ccc;
+					margin-right: -1px;
+					margin-bottom: -1px;
+				}
+			</style>
+		</div>
+	</article>
+
+
+	<article>
+		<h5>TAB菜单</h5>
+		<div class="css-con ">
+
+			<ul class="tab_ul">
+				<li class="tab_li on">a</li>
+				<li class="tab_li">b</li>
+				<li class="tab_li">c</li>
+				<li class="tab_li">d</li>
+			</ul>
+
+
+			<style>
+				.tab_ul{
+					width: 100%;
+					font-size: 0;
+					border-bottom: 1px solid #ccc;
+				}
+				.tab_li{
+					display: inline-block;
+					height: 30px;
+					width: 50px;
+					border: 1px solid #ccc;
+					margin-bottom: -1px;
+					margin-left: 30px;
+					text-align: center;
+					line-height: 30px;
+					font-size: 15px;
+					color: #000;
+				}
+				.tab_li.on{
+					border-bottom: 1px solid #fff;
+				}
+			</style>
+		</div>
+	</article>
+
+
+
+
+	<article>
+		<h5>多行文字垂直居中</h5>
+		<div class="css-con ">
+
+
+			<div class="test_center_wrap">
+				<div class="test_center">
+					<div>
+						<p>1</p>
+						<p>2</p>
+						<p>3</p>
+						<p>4</p>
+					</div>
+				</div>
+			</div>
+
+			<style>
+				.test_center_wrap{
+					display: table;
+					height: 200px;
+					width: 100%;
+				}
+				.test_center{
+					height: 200px;
+					width: 100%;
+					border-top: 1px solid #ccc;
+					border-bottom: 1px solid #ccc;
+					text-align: center;
+					display: table-cell;
+					vertical-align: middle;
+				}
+			</style>
+		</div>
+	</article>
+
+
+
+
+
 
 
 	<article>
