--- a/css.html
+++ b/css.html
@@ -295,7 +295,8 @@
 					color: #000;
 				}
 				.tab_li.on{
-					border-bottom: 1px solid #fff;
+					border-bottom: 2px solid #fff;
+					margin-bottom: -2px;
 				}
 			</style>
 		</div>
