--- a/scroll.html
+++ b/scroll.html
@@ -26,7 +26,7 @@
 		.nav_ul{
 			height: 100%;
 			width: 220px;
-			overflow-y: scroll;
+			overflow-y: auto;
 			overflow-x: hidden;
 		}
 		.nav_li{
